# Erlang-Shen

./: .gitignore  LICENSE  README.md
run_file/: CMakeLists.txt
run_file/config/: CMakeLists.txt  config.yaml
run_file/config/include/: config.hpp
run_file/config/src/: config.cpp
run_file/core/src/: core.cpp
run_file/vision/: CMakeLists.txt
run_file/vision/include/: yolov12_openvino.hpp
run_file/vision/models/yolov12-640-4.4/: best.xml
run_file/vision/src/: test.cpp  yolov12_openvino.cpp
yolov12/: train.py
yolov12/convert/: convert_test.py  onnx2ov.py
yolov12/convert/upload/: upload_roboflow.py
yolov12/ultralytics.egg-info/: PKG-INFO
